[project]
name = "autogen-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.4.7",
    "autogen-ext[azure,openai]>=0.4.7",
    "litellm[proxy]>=1.61.6",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.9.0",
]
